<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_back"
    tools:context=".MainActivity"
    android:padding="@dimen/padding_20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width"
            android:layout_weight="1"
            style="@style/ButtonSearch"
            app:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/main_text"
             />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_main"
            style="@style/ButtonLibrary"
            app:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/YP_black"
            android:textAllCaps="false"
            android:textSize="@dimen/main_text"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width"
            android:layout_weight="1"
            style="@style/ButtonSettings"
            app:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/margin_main"
            android:text="@string/settings"
            android:textColor="@color/YP_black"
            android:textAllCaps="false"
            android:textSize="@dimen/main_text"/>
    </LinearLayout>

</LinearLayout>