<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:theme="@style/Theme.Playlist"
    tools:context=".PlayerActivity">


    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main16"
        android:layout_marginTop="@dimen/margin_main16"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_main16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_main16" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:scaleType="fitXY"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline24dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/album"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/testAlbum"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/title22"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/artist"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline24dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline24dp" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/testArtist"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonPlay"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline24dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline24dp" />


    <TextView
        android:id="@+id/buttonPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_29dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_button_playlist"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@id/timeNow"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintStart_toStartOf="@+id/left_guideline24dp" />

    <TextView
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_4dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_play_button"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@id/timeNow"
        app:layout_constraintEnd_toStartOf="@+id/buttonLike"
        app:layout_constraintStart_toEndOf="@id/buttonPlaylist" />

    <TextView
        android:id="@+id/buttonLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_29dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_favorite_button"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@id/timeNow"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline24dp"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay" />

    <TextView
        android:id="@+id/timeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_39dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/testTimeNow"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/durationText"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline24dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline24dp" />

    <TextView
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/duration"
        android:textColor="@color/YP_text_gray"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/albumText"
        app:layout_constraintStart_toStartOf="@id/left_guideline16dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:text="@string/testDuration"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/durationText"
        app:layout_constraintBottom_toTopOf="@id/albumToo"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16dp" />

    <TextView
        android:id="@+id/albumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/album"
        android:textColor="@color/YP_text_gray"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/yearText"
        app:layout_constraintStart_toStartOf="@id/left_guideline16dp" />

    <TextView
        android:id="@+id/albumToo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_main16"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:singleLine="false"
        android:text="@string/testAlbum"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/albumText"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16dp"
        app:layout_constraintStart_toEndOf="@+id/albumText"
        app:layout_constraintWidth_max="500dp" />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/year"
        android:textColor="@color/YP_text_gray"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/genreText"
        app:layout_constraintStart_toStartOf="@id/left_guideline16dp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:text="@string/testYear"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/yearText"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16dp" />

    <TextView
        android:id="@+id/genreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/genre"
        android:textColor="@color/YP_text_gray"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/countryText"
        app:layout_constraintStart_toStartOf="@id/left_guideline16dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main16"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:text="@string/testGenre"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/genreText"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16dp" />

    <TextView
        android:id="@+id/countryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main16"
        android:layout_marginBottom="@dimen/margin_28dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/country"
        android:textColor="@color/YP_text_gray"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline16dp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main16"
        android:layout_marginBottom="@dimen/margin_28dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/testCountry"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_regular_14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/countryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>