<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin_4dp"
        android:paddingEnd="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="86dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="@dimen/margin_24dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/YP_black"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:padding="@dimen/padding"
                android:textColor="@color/YP_black" />

            <TextView
                android:layout_width="@dimen/layout_width"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_left"
                android:textSize="@dimen/title" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginTop="@dimen/margin_21dp"
            android:layout_marginBottom="@dimen/margin_21dp"
            android:layout_weight="15"
            android:gravity="top"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="@dimen/ys_regular" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/YP_text_gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_main"
        android:paddingTop="@dimen/padding_19dp"
        android:paddingEnd="@dimen/padding_end"
        android:paddingBottom="@dimen/padding_18dp">

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="32"
            android:gravity="top"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/ys_regular" />

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/YP_text_gray"
            android:drawableLeft="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_main"
        android:paddingTop="@dimen/padding_19dp"
        android:paddingBottom="@dimen/padding_18dp"
        android:paddingEnd="@dimen/padding_end">

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="32"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/ys_regular"
            android:gravity="top" />

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:backgroundTint="@color/YP_text_gray"
            android:drawableLeft="@drawable/ic_group"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_main"
        android:paddingTop="@dimen/padding_19dp"
        android:paddingBottom="@dimen/padding_18dp"
        android:paddingEnd="@dimen/padding_end">

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="32"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="@dimen/ys_regular"
            android:gravity="top" />

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:backgroundTint="@color/YP_text_gray"
            android:drawableLeft="@drawable/ic_arrow_forward"
            />

    </LinearLayout>

</LinearLayout>